# EPathfinder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RECOVERY_STATUS.md  versions.json  vision_calibration.json
analysis/: DECOMPOSITION.md  RECOVERED_UNITS.md
docs/: FORENSIC_HARDWARE.md  HARDWARE_ARCHITECTURE.md
include/camera/: camera.hpp  camera_t205.hpp  camera_types.hpp  camera_usb.hpp  camera_v4l.hpp  camera_zr10.hpp  gimbal_transform.hpp
include/controller/: client_controller.hpp  controller_types.hpp  vehicle_controller.hpp
include/core/: angles.hpp  crc.hpp  emath.hpp  kalman.hpp  pixel_mapper.hpp
include/elink/: elink_abstract_handler.hpp  elink_arm_handler.hpp  elink_attitude_handler.hpp  elink_communicator.hpp  elink_flower_handler.hpp  elink_gimbal_handler.hpp  elink_interceptor_handler.hpp  elink_movement_handler.hpp  elink_position_handler.hpp  elink_shumodav_handler.hpp  elink_status_handler.hpp  elink_telemetry.hpp
include/interception/: einterceptor.hpp
include/led/: vehicle_led.hpp
include/lidar/: interceptor_lidar.hpp  interceptor_livox.hpp  lds_lidar.hpp
include/link/: abstract_link.hpp  serial_link.hpp  tcp_link.hpp  udp_link.hpp
include/logging/: elogger.hpp
include/mavlink/: abstract_handler.hpp  attitude_handler.hpp  control_handler.hpp  gps_handler.hpp  heartbeat_handler.hpp  log_handler.hpp  mavlink_communicator.hpp  plan_handler.hpp  rc_channels_handler.hpp  time_sync_handler.hpp  wind_handler.hpp
include/pathfinder/: pathfinder.hpp
include/remote/: remote_controller.hpp
include/road/: road_runner.hpp  road_types.hpp  roads.hpp
include/scout/: escout.hpp  scout_types.hpp
include/vision/: thunder_gaze.hpp  vision.hpp  vision_types.hpp
include/vnav/: vnav.hpp
src/: main.cpp
src/camera/: camera.cpp  camera_t205.cpp  camera_usb.cpp  camera_v4l.cpp  camera_zr10.cpp  gimbal_transform.cpp
src/controller/: client_controller.cpp  vehicle_controller.cpp
src/core/: angles.cpp  crc.cpp  emath.cpp  kalman.cpp  pixel_mapper.cpp
src/elink/: elink_abstract_handler.cpp  elink_arm_handler.cpp  elink_attitude_handler.cpp  elink_communicator.cpp  elink_flower_handler.cpp  elink_gimbal_handler.cpp  elink_interceptor_handler.cpp  elink_movement_handler.cpp  elink_position_handler.cpp  elink_shumodav_handler.cpp  elink_status_handler.cpp  elink_telemetry.cpp
src/interception/: einterceptor.cpp
src/led/: vehicle_led.cpp
src/lidar/: interceptor_lidar.cpp  interceptor_livox.cpp  lds_lidar.cpp
src/link/: abstract_link.cpp  serial_link.cpp  tcp_link.cpp  udp_link.cpp
src/logging/: elogger.cpp
src/mavlink/: abstract_handler.cpp  attitude_handler.cpp  control_handler.cpp  gps_handler.cpp  heartbeat_handler.cpp  log_handler.cpp  mavlink_communicator.cpp  plan_handler.cpp  rc_channels_handler.cpp  time_sync_handler.cpp  wind_handler.cpp
src/pathfinder/: pathfinder.cpp
src/remote/: remote_controller.cpp
src/road/: road_runner.cpp  road_types.cpp  roads.cpp
src/scout/: escout.cpp
src/vision/: thunder_gaze.cpp  thunder_gaze_factory.cpp  thunder_gaze_versions.cpp  vision.cpp
src/vnav/: vnav.cpp
tests/: core_tests.cpp
tools/: decompose.py  extract_function.py  meta_dump.cpp  scan_ext4_free.py  verify_mavlink.py  verify_metaobjects.py
